# Chainwork

./: .gitattributes  .gitignore  CONTRIBUTING.md  Formal Payment Demand.txt  README.md  architecture.md  notes.md  package-lock.json  package.json  to the new Freelancer
app/: .env  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
client/: .env  craco.config.js  nodemon.json  package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.tsx
docs/: .env  README.md  api-docs.js  package-lock.json  package.json  swagger.json
server/: .env.example  .gitignore  .prettierignore  README.md  compose.yml  docs.js  ecosystem.config.js  package-lock.json  package.json  server.js  testLogin.js  testRegister.js  testRegistration.js
server/controllers/: authController.js  contractController.js  jobController.js  userController.js  verifyTxController.js
server/docs/: swagger.json
server/middleware/: authMiddleware.js
server/midleware/: auth.validation.js  rateLimiter.js
server/models/: Challenge.js  Contract.js  Job.js  User.js
server/routes/: auth.js  contractRoutes.js  contracts.js  jobs.js  users.js  (+1 more)
solana-program/: Anchor.toml  Cargo.toml  escrow-tests.rs  instruction.rs  lib.rs  modules.xml  package.json  processor.rs  release_token.rs  rent.rs  structure.css  transfer.rs  tsconfig.json
solana-program/fuzz/: Cargo.toml  fuzzREADME.md  fuzz_init_sol.rs  fuzz_invalid_pda.rs  fuzz_release_sol.rs  package-lock.json
(+104 files in other folders)
