[package]
name = "escrow_fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-fuzz = "0.28.0"
anchor-lang = "0.30.1"
borsh = "1.5.0"
rand = "0.8"
solana-program-test = "1.18.18"
solana-sdk = "1.18.18"
spl-token = "4.0.0"
escrow_program = { path = "../program" } # our path to the escrow program

[[bin]]
name = "fuzz_init_sol"
path = "fuzz_init_sol.rs"

[[bin]]
name = "fuzz_release_sol"
path = "fuzz_release_sol.rs"

[[bin]]
name = "fuzz_invalid_pda"
path = "fuzz_invalid_pda.rs"
